--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "apexcharts": "^4.2.0",
     "axios": "^1.7.7",
     "element-plus": "^2.8.6",
     "express": "^4.21.1",
@@ -21,7 +22,8 @@
     "v-money3": "^3.24.1",
     "vue": "^3.5.12",
     "vue-currency-input": "^3.1.0",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
