--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@vue/tsconfig": "^0.5.1",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^6.2.3",
-    "sass": "^1.81.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "typescript": "~5.5.4",
     "unplugin-element-plus": "^0.8.0",
     "vite": "^5.4.8",
